-- phpMyAdmin SQL Dump
-- version 5.2.1
-- https://www.phpmyadmin.net/
--
-- Host: 127.0.0.1
-- Generation Time: Feb 09, 2026 at 09:08 AM
-- Server version: 10.4.32-MariaDB
-- PHP Version: 8.2.12

SET SQL_MODE = "NO_AUTO_VALUE_ON_ZERO";
START TRANSACTION;
SET time_zone = "+00:00";


/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
/*!40101 SET NAMES utf8mb4 */;

--
-- Database: `mahapurush_mandir`
--

-- --------------------------------------------------------

--
-- Table structure for table `contributions`
--

CREATE TABLE `contributions` (
  `id` int(11) NOT NULL,
  `receipt_id` int(11) DEFAULT NULL,
  `added_by` int(11) DEFAULT NULL,
  `contributor_name` varchar(100) DEFAULT NULL,
  `contribution_type_id` int(11) NOT NULL,
  `title` varchar(150) NOT NULL,
  `quantity` decimal(10,2) DEFAULT NULL,
  `unit` varchar(50) DEFAULT NULL,
  `description` text DEFAULT NULL,
  `status` enum('pending','approved','rejected') DEFAULT 'pending',
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `contribution_type`
--

CREATE TABLE `contribution_type` (
  `id` int(11) NOT NULL,
  `type` varchar(50) NOT NULL,
  `description` text DEFAULT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `contribution_type`
--

INSERT INTO `contribution_type` (`id`, `type`, `description`, `created_at`, `updated_at`) VALUES
(1, 'Food', NULL, '2026-02-01 13:34:15', '2026-02-06 10:30:13'),
(2, 'Pooja Material', NULL, '2026-02-01 13:34:15', '2026-02-06 10:30:13'),
(3, 'Maintenance & Repair', NULL, '2026-02-01 13:34:40', '2026-02-06 10:30:13'),
(4, 'Furniture & Assets', NULL, '2026-02-01 13:34:40', '2026-02-06 10:30:13'),
(5, 'Daily Essentials', NULL, '2026-02-01 13:34:58', '2026-02-06 10:30:13'),
(6, 'Festival Supplies', NULL, '2026-02-01 13:34:58', '2026-02-06 10:30:13'),
(7, 'Books & Scriptures', NULL, '2026-02-01 13:35:11', '2026-02-06 10:30:13'),
(8, 'Volunteer Service', NULL, '2026-02-01 13:35:11', '2026-02-06 10:30:13');

-- --------------------------------------------------------

--
-- Table structure for table `donations`
--

CREATE TABLE `donations` (
  `id` int(11) NOT NULL,
  `user_id` int(11) DEFAULT NULL,
  `full_name` varchar(255) NOT NULL,
  `note` varchar(255) NOT NULL,
  `donation_type_id` int(11) NOT NULL,
  `amount` decimal(10,2) NOT NULL,
  `payment_id` int(11) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `donation_type`
--

CREATE TABLE `donation_type` (
  `id` int(11) NOT NULL,
  `type` varchar(100) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `events`
--

CREATE TABLE `events` (
  `id` int(11) NOT NULL,
  `name` varchar(150) NOT NULL,
  `duration` varchar(50) DEFAULT NULL,
  `conduct_on` date DEFAULT NULL,
  `max_participants` int(11) DEFAULT NULL,
  `status` varchar(255) NOT NULL,
  `created_by` int(11) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `events`
--

INSERT INTO `events` (`id`, `name`, `duration`, `conduct_on`, `max_participants`, `status`, `created_by`, `created_at`, `updated_at`) VALUES
(1, 'Vardhapan', '2', '2026-02-08', 0, '', 0, '2026-02-01 15:48:10', '2026-02-06 10:30:13');

-- --------------------------------------------------------

--
-- Table structure for table `event_participants`
--

CREATE TABLE `event_participants` (
  `id` int(11) NOT NULL,
  `user_id` int(11) NOT NULL,
  `event_id` int(11) NOT NULL,
  `payment_id` int(11) DEFAULT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `event_participants`
--

INSERT INTO `event_participants` (`id`, `user_id`, `event_id`, `payment_id`, `created_at`, `updated_at`) VALUES
(1, 15, 1, NULL, '2026-02-08 08:28:01', '2026-02-08 08:28:01');

-- --------------------------------------------------------

--
-- Table structure for table `feedbacks`
--

CREATE TABLE `feedbacks` (
  `id` int(11) NOT NULL,
  `email` varchar(255) NOT NULL,
  `rating` enum('5','4','3','2','1') NOT NULL,
  `message` varchar(255) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `gallery`
--

CREATE TABLE `gallery` (
  `id` int(11) NOT NULL,
  `gallery_category_id` int(11) DEFAULT NULL,
  `type` varchar(50) DEFAULT NULL,
  `content` text NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `gallery_category`
--

CREATE TABLE `gallery_category` (
  `id` int(11) NOT NULL,
  `type` varchar(100) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `gallery_category`
--

INSERT INTO `gallery_category` (`id`, `type`, `created_at`, `updated_at`) VALUES
(1, 'Temple', '2026-01-31 10:37:16', '2026-02-06 10:30:14'),
(2, 'Events', '2026-01-31 10:37:16', '2026-02-06 10:30:14'),
(3, 'Festivals', '2026-01-31 10:37:30', '2026-02-06 10:30:14'),
(4, 'Rituals', '2026-01-31 10:37:30', '2026-02-06 10:30:14');

-- --------------------------------------------------------

--
-- Table structure for table `payments`
--

CREATE TABLE `payments` (
  `id` int(11) NOT NULL,
  `receipt_id` int(11) DEFAULT NULL,
  `user_id` int(11) DEFAULT NULL,
  `donor_name` varchar(100) DEFAULT NULL,
  `amount` decimal(10,2) NOT NULL,
  `note` text DEFAULT NULL,
  `payment_method` enum('upi','cash','card','netbanking') NOT NULL,
  `transaction_ref` varchar(100) DEFAULT NULL,
  `status` enum('pending','success','failed') DEFAULT 'pending',
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Table structure for table `pooja`
--

CREATE TABLE `pooja` (
  `id` int(11) NOT NULL,
  `user_id` int(11) NOT NULL,
  `pooja_type_id` int(11) NOT NULL,
  `pooja_date` date NOT NULL,
  `time_slot` enum('morning','afternoon','evening') DEFAULT NULL,
  `description` text DEFAULT NULL,
  `fee` decimal(10,2) DEFAULT NULL,
  `payment_id` int(11) DEFAULT NULL,
  `status` enum('pending','paid','cancelled','completed') DEFAULT 'pending',
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `pooja`
--

INSERT INTO `pooja` (`id`, `user_id`, `pooja_type_id`, `pooja_date`, `time_slot`, `description`, `fee`, `payment_id`, `status`, `created_at`, `updated_at`) VALUES
(12, 15, 2, '2026-02-10', 'morning', 'hi', 200.00, NULL, 'pending', '2026-02-09 06:34:05', '2026-02-09 06:34:05');

-- --------------------------------------------------------

--
-- Table structure for table `pooja_type`
--

CREATE TABLE `pooja_type` (
  `id` int(11) NOT NULL,
  `type` varchar(100) NOT NULL,
  `fee` decimal(10,2) DEFAULT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `pooja_type`
--

INSERT INTO `pooja_type` (`id`, `type`, `fee`, `created_at`, `updated_at`) VALUES
(1, 'Archana Pooja', 100.00, '2026-01-31 16:16:59', '2026-02-06 10:30:13'),
(2, 'Abhishek Pooja', 200.00, '2026-01-31 16:16:59', '2026-02-06 10:30:13'),
(3, 'Ganesh Pooja', 250.00, '2026-01-31 16:17:29', '2026-02-06 10:30:13'),
(4, 'Satyanarayan Pooja', 501.00, '2026-01-31 16:17:29', '2026-02-06 10:30:13');

-- --------------------------------------------------------

--
-- Table structure for table `receipt`
--

CREATE TABLE `receipt` (
  `id` int(11) NOT NULL,
  `user_id` int(11) DEFAULT NULL,
  `receipt_no` varchar(50) DEFAULT NULL,
  `purpose` enum('donation','pooja','contribution') NOT NULL,
  `amount` decimal(10,2) NOT NULL DEFAULT 0.00,
  `source_table` varchar(50) NOT NULL,
  `issued_on` datetime DEFAULT current_timestamp(),
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  `verified_by_secretary` int(11) DEFAULT NULL,
  `verified_at` datetime DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `receipt`
--

INSERT INTO `receipt` (`id`, `user_id`, `receipt_no`, `purpose`, `amount`, `source_table`, `issued_on`, `created_at`, `updated_at`, `verified_by_secretary`, `verified_at`) VALUES
(36, 10, 'DON/2026/0206151902/685', 'donation', 10.00, 'donations', '2026-02-06 19:49:02', '2026-02-06 14:19:02', '2026-02-08 13:58:13', 15, '2026-02-08 19:28:13');

-- --------------------------------------------------------

--
-- Table structure for table `roles`
--

CREATE TABLE `roles` (
  `id` int(11) NOT NULL,
  `name` varchar(50) NOT NULL,
  `description` text DEFAULT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `roles`
--

INSERT INTO `roles` (`id`, `name`, `description`, `created_at`, `updated_at`) VALUES
(1, 'customer', 'Customer', '2026-01-28 10:27:01', '2026-02-06 10:30:13'),
(2, 'member', 'Member', '2026-01-27 16:06:09', '2026-02-06 10:30:13'),
(3, 'secretary', 'Secretary', '2026-01-27 16:05:53', '2026-02-06 10:30:13'),
(4, 'treasurer', 'Treasurer', '2026-01-27 16:05:53', '2026-02-06 10:30:13'),
(98, 'vice chairman', 'Vice Chairman', '2026-01-27 16:04:11', '2026-02-06 10:30:13'),
(99, 'chairman', 'Chairman', '2026-01-27 16:04:11', '2026-02-06 10:30:13');

-- --------------------------------------------------------

--
-- Table structure for table `temple_info`
--

CREATE TABLE `temple_info` (
  `id` int(11) NOT NULL,
  `temple_name` varchar(255) NOT NULL,
  `description` text DEFAULT NULL,
  `photo` varchar(255) NOT NULL,
  `contact` varchar(100) DEFAULT NULL,
  `time` varchar(100) DEFAULT NULL,
  `address` varchar(255) NOT NULL,
  `location` varchar(255) DEFAULT NULL,
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `temple_info`
--

INSERT INTO `temple_info` (`id`, `temple_name`, `description`, `photo`, `contact`, `time`, `address`, `location`, `updated_at`) VALUES
(1, 'Mahapurush Temple', 'A sacred temple dedicated to Lord Shiva, offering peace and spiritual harmony.', '', '+91 9823369562', '8:00 AM - 8:00 PM', 'A/P: Budruk, Oros', '4P76+HF3, Sindhu Durg, Oros, Maharashtra 416812', '2026-02-06 10:30:13');

-- --------------------------------------------------------

--
-- Table structure for table `users`
--

CREATE TABLE `users` (
  `id` int(11) NOT NULL,
  `first_name` varchar(100) NOT NULL,
  `last_name` varchar(100) DEFAULT NULL,
  `phone` varchar(20) DEFAULT NULL,
  `photo` varchar(255) DEFAULT NULL,
  `email` varchar(150) NOT NULL,
  `password` varchar(255) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `users`
--

INSERT INTO `users` (`id`, `first_name`, `last_name`, `phone`, `photo`, `email`, `password`, `created_at`, `updated_at`) VALUES
(10, 'Normal', 'Customer', '1234567890', NULL, 'customer1@gmail.com', '$2y$10$GavV.I885gPQLmj6H0Bsbu0e7Q/iDAyCq2oBmsg6EVuxzEM4JDKvy', '2026-02-06 10:33:44', '2026-02-06 15:05:05'),
(11, 'First', 'Member', '1234567899', NULL, 'member1@gmail.com', '$2y$10$sP.88lADtQZ5Mhlc3/jw9uZXpMkdZOLJSH74ARQi6mob6/Lw7jSgK', '2026-02-06 10:36:03', '2026-02-08 07:28:42'),
(12, 'First', 'Secretary', '1234567811', NULL, 'secretary@gmail.com', '$2y$10$0fA9/9U7yxZo93zO.ewCROH7NvtKQ79u/B.LT4GAxF3UzViArvrBi', '2026-02-06 10:36:58', '2026-02-08 07:28:53'),
(13, 'First', 'Chairman', '1233333333', NULL, 'chairman@gmail.com', '$2y$10$6OzQU9qVOSiaNWbFYJbiiOC83C/mST6JHpsXStXoevdBv4kxFdmW2', '2026-02-06 10:37:25', '2026-02-08 07:28:49'),
(14, 'First', 'Vicechairman', '1111111111', NULL, 'vicechairman@gmail.com', '$2y$10$.R4jIkU4B14.TNMzfO7qIuvvm.7gl.otVEWrAwMZNYABLqZeu45Ze', '2026-02-06 10:37:48', '2026-02-08 07:28:59'),
(15, 'Abhishek', 'Bhat', '9823369562', NULL, 'abhishekbhat014@gmail.com', '$2y$10$d6RjhG7y4GnolX0HChe7AOv2FaqyoABFCo9cuN7EPUdK.B7kVJgSS', '2026-02-06 10:47:12', '2026-02-08 12:16:00'),
(16, 'Yojana', 'Gawade', '8999057576', NULL, 'gawadeyojana010@gmail.com', '$2y$10$tnbidxYPxJeqrSs0PYutAednrjCEVJl4jk/ebkIAtPg0akBTiy97O', '2026-02-06 10:48:13', '2026-02-08 07:28:56'),
(17, 'Santosh', 'Gawade', '2222222222', NULL, 'santoshgawade@gmail.com', '$2y$10$luDrbEJxJIoCeEWAfvvZgutZHbAOdqpCU8lrU9xlflxR3.ptj4wY.', '2026-02-06 10:51:22', '2026-02-06 10:51:22'),
(18, 'adsf', 'afds', '1234555555', NULL, 'customer11@gmail.com', '$2y$10$4wFOCO1AByz0he2HlKSWpOozBx6.bFvWSwIFemi/pvk4FXtgzBa2G', '2026-02-09 05:48:54', '2026-02-09 05:48:54');

-- --------------------------------------------------------

--
-- Table structure for table `user_roles`
--

CREATE TABLE `user_roles` (
  `user_id` int(11) NOT NULL,
  `role_id` int(11) NOT NULL,
  `created_at` timestamp NOT NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp()
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Dumping data for table `user_roles`
--

INSERT INTO `user_roles` (`user_id`, `role_id`, `created_at`, `updated_at`) VALUES
(15, 1, '2026-02-06 10:47:12', '2026-02-06 10:47:12'),
(15, 2, '2026-02-06 10:51:22', '2026-02-08 09:48:03'),
(15, 3, '2026-02-06 10:33:44', '2026-02-08 13:39:01'),
(15, 4, '2026-02-06 10:48:13', '2026-02-08 10:12:00'),
(15, 98, '2026-02-07 13:38:48', '2026-02-07 15:38:14'),
(15, 99, '2026-02-07 15:38:43', '2026-02-07 15:38:43');

--
-- Indexes for dumped tables
--

--
-- Indexes for table `contributions`
--
ALTER TABLE `contributions`
  ADD PRIMARY KEY (`id`),
  ADD KEY `contribution_type_id` (`contribution_type_id`),
  ADD KEY `fk_contributions_receipt` (`receipt_id`),
  ADD KEY `fk_contributions_added_by` (`added_by`);

--
-- Indexes for table `contribution_type`
--
ALTER TABLE `contribution_type`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `donations`
--
ALTER TABLE `donations`
  ADD PRIMARY KEY (`id`),
  ADD KEY `user_id` (`user_id`),
  ADD KEY `donation_type_id` (`donation_type_id`),
  ADD KEY `payment_id` (`payment_id`);

--
-- Indexes for table `donation_type`
--
ALTER TABLE `donation_type`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `events`
--
ALTER TABLE `events`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `event_participants`
--
ALTER TABLE `event_participants`
  ADD PRIMARY KEY (`id`),
  ADD KEY `user_id` (`user_id`),
  ADD KEY `event_id` (`event_id`);

--
-- Indexes for table `feedbacks`
--
ALTER TABLE `feedbacks`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `gallery`
--
ALTER TABLE `gallery`
  ADD PRIMARY KEY (`id`),
  ADD KEY `gallery_category_id` (`gallery_category_id`);

--
-- Indexes for table `gallery_category`
--
ALTER TABLE `gallery_category`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `payments`
--
ALTER TABLE `payments`
  ADD PRIMARY KEY (`id`),
  ADD KEY `user_id` (`user_id`),
  ADD KEY `fk_payments_receipt` (`receipt_id`);

--
-- Indexes for table `pooja`
--
ALTER TABLE `pooja`
  ADD PRIMARY KEY (`id`),
  ADD KEY `user_id` (`user_id`),
  ADD KEY `pooja_type_id` (`pooja_type_id`);

--
-- Indexes for table `pooja_type`
--
ALTER TABLE `pooja_type`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `receipt`
--
ALTER TABLE `receipt`
  ADD PRIMARY KEY (`id`),
  ADD UNIQUE KEY `receipt_no` (`receipt_no`),
  ADD KEY `idx_receipt_user` (`user_id`);

--
-- Indexes for table `roles`
--
ALTER TABLE `roles`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `temple_info`
--
ALTER TABLE `temple_info`
  ADD PRIMARY KEY (`id`);

--
-- Indexes for table `users`
--
ALTER TABLE `users`
  ADD PRIMARY KEY (`id`),
  ADD UNIQUE KEY `email` (`email`);

--
-- Indexes for table `user_roles`
--
ALTER TABLE `user_roles`
  ADD PRIMARY KEY (`user_id`,`role_id`),
  ADD KEY `role_id` (`role_id`);

--
-- AUTO_INCREMENT for dumped tables
--

--
-- AUTO_INCREMENT for table `contributions`
--
ALTER TABLE `contributions`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=9;

--
-- AUTO_INCREMENT for table `contribution_type`
--
ALTER TABLE `contribution_type`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=9;

--
-- AUTO_INCREMENT for table `donations`
--
ALTER TABLE `donations`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=2;

--
-- AUTO_INCREMENT for table `donation_type`
--
ALTER TABLE `donation_type`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT;

--
-- AUTO_INCREMENT for table `events`
--
ALTER TABLE `events`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=2;

--
-- AUTO_INCREMENT for table `event_participants`
--
ALTER TABLE `event_participants`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=2;

--
-- AUTO_INCREMENT for table `feedbacks`
--
ALTER TABLE `feedbacks`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=5;

--
-- AUTO_INCREMENT for table `gallery`
--
ALTER TABLE `gallery`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=6;

--
-- AUTO_INCREMENT for table `gallery_category`
--
ALTER TABLE `gallery_category`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=5;

--
-- AUTO_INCREMENT for table `payments`
--
ALTER TABLE `payments`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=26;

--
-- AUTO_INCREMENT for table `pooja`
--
ALTER TABLE `pooja`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=13;

--
-- AUTO_INCREMENT for table `pooja_type`
--
ALTER TABLE `pooja_type`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=5;

--
-- AUTO_INCREMENT for table `receipt`
--
ALTER TABLE `receipt`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=37;

--
-- AUTO_INCREMENT for table `roles`
--
ALTER TABLE `roles`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=101;

--
-- AUTO_INCREMENT for table `temple_info`
--
ALTER TABLE `temple_info`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=2;

--
-- AUTO_INCREMENT for table `users`
--
ALTER TABLE `users`
  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=19;

--
-- Constraints for dumped tables
--

--
-- Constraints for table `contributions`
--
ALTER TABLE `contributions`
  ADD CONSTRAINT `contributions_ibfk_2` FOREIGN KEY (`contribution_type_id`) REFERENCES `contribution_type` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `fk_contributions_added_by` FOREIGN KEY (`added_by`) REFERENCES `users` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `fk_contributions_receipt` FOREIGN KEY (`receipt_id`) REFERENCES `receipt` (`id`) ON DELETE CASCADE;

--
-- Constraints for table `donations`
--
ALTER TABLE `donations`
  ADD CONSTRAINT `donations_ibfk_1` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `donations_ibfk_2` FOREIGN KEY (`donation_type_id`) REFERENCES `donation_type` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `donations_ibfk_3` FOREIGN KEY (`payment_id`) REFERENCES `payments` (`id`) ON DELETE CASCADE;

--
-- Constraints for table `event_participants`
--
ALTER TABLE `event_participants`
  ADD CONSTRAINT `event_participants_ibfk_1` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `event_participants_ibfk_2` FOREIGN KEY (`event_id`) REFERENCES `events` (`id`) ON DELETE CASCADE;

--
-- Constraints for table `gallery`
--
ALTER TABLE `gallery`
  ADD CONSTRAINT `gallery_ibfk_1` FOREIGN KEY (`gallery_category_id`) REFERENCES `gallery_category` (`id`) ON DELETE SET NULL;

--
-- Constraints for table `payments`
--
ALTER TABLE `payments`
  ADD CONSTRAINT `fk_payments_receipt` FOREIGN KEY (`receipt_id`) REFERENCES `receipt` (`id`) ON DELETE CASCADE;

--
-- Constraints for table `pooja`
--
ALTER TABLE `pooja`
  ADD CONSTRAINT `pooja_ibfk_1` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `pooja_ibfk_2` FOREIGN KEY (`pooja_type_id`) REFERENCES `pooja_type` (`id`) ON DELETE CASCADE;

--
-- Constraints for table `user_roles`
--
ALTER TABLE `user_roles`
  ADD CONSTRAINT `user_roles_ibfk_1` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `user_roles_ibfk_2` FOREIGN KEY (`role_id`) REFERENCES `roles` (`id`) ON DELETE CASCADE;
COMMIT;

/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
